--- a/clock.html
+++ b/clock.html
@@ -7,6 +7,12 @@
   </head>
   <body>
 
+  <div id="wrapper">
+        <div id="HH"></div>
+        <div id="MM"></div>
+        <div id="SS"></div>
+  </div>
+
     <script type="text/javascript" src="clock.js"></script>
   </body>
 </html>
