--- a/clock.html
+++ b/clock.html
@@ -7,12 +7,15 @@
   </head>
   <body>
 
-  <div id="wrapper">
-        <div id="HH"></div>
-        <div id="MM"></div>
-        <div id="SS"></div>
-  </div>
+    <div id="background">
+        <div id="wrapper">
+            <div id="HH"></div>
+            <div id="MM"></div>
+            <div id="SS"></div>
+        </div>
 
+      <div id="hexnum"></div>
+    </div>
     <script type="text/javascript" src="clock.js"></script>
   </body>
 </html>
