--- a/clock.html
+++ b/clock.html
@@ -17,6 +17,7 @@
                     <div id="clock">00 : 00 : 00</div>
             </div>
             <div id="hexcolor">#000000</div>
+            <div id="next" type="button">Next</div>
     </div>
 
 
